--- a/index.html
+++ b/index.html
@@ -2,18 +2,36 @@
 <html>
 
 <head>
-    <title>Under Construction</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-        integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU=" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.3.0/milligram.min.css"
-        integrity="sha256-Ro/wP8uUi8LR71kwIdilf78atpu8bTEwrK5ZotZo+Zc=" crossorigin="anonymous" />
+    <title>Currently Under Construction</title>
+
+    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/pure-min.css">
+    <!--[if lte IE 8]>
+        <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/grids-responsive-old-ie-min.css">
+    <![endif]-->
+    <!--[if gt IE 8]><!-->
+    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/grids-responsive-min.css">
+    <!--<![endif]-->
+
+    <link rel="stylesheet" type="text/css" href="styles/base.css" />
 </head>
 
 <body>
-<section class="container"></section>
+    <div class="nav">
+        <div class="pure-menu pure-menu-horizontal">
+            <ul class="pure-menu-list">
+                <li class="pure-menu-item pure-menu-selected"><a class="pure-menu-link" href="#home">Home</a></li>
+                <li class="pure-menu-item"><a class="pure-menu-link" href="#projects">Projects</a></li>
+                <li class="pure-menu-item"><a class="pure-menu-link" href="#about">About</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="profile">
+        
+    </div>
 </body>
 
 </html>
-<h1>Currently Under Construction</h1>
