Added Experience and theming

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
@@ -40,13 +40,29 @@
                     <a class="nav-link" href="#">About</a>
                 </li>
             </ul>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="https://www.linkedin.com/in/huy-nguyen-454a6016a/">
+                        <span class="d-md-none">Linkedin</span>
+                        <img class="d-inline-block align-top" src="images/linkedin.png" width="30" height="30"
+                            alt="Linkedin">
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://github.com/HuyNguyenAu">
+                        <span class="d-md-none">Github</span>
+                        <img class="d-inline-block align-top" src="images/github.png" width="30" height="30"
+                            alt="Github">
+                    </a>
+                </li>
+            </ul>
         </div>
     </nav>
 
     <!-- Content -->
     <div class="container-fluid">
         <!-- Profile -->
-        <div class="row m-3 pb-5">
+        <div class="row m-3">
             <div class="col">
                 <div class="row">
                     <p class="hello font-weight-bold">HELLO</p>
@@ -85,22 +101,129 @@
         <div class="row m-3 pt-5">
             <div class="col">
                 <div class="row">
-                    <h5 class="lead left-border-purple" style="font-size:xx-large;">
+                    <h5 class="lead left-border-purple font-weight-bold" style="font-size:xx-large;">
                         Experience
                 </div>
                 <div class="row">
                     <p style="font-size:large;">
-                        Technical Skills and Technolgies
+                        Technical Skills and Technologies
                     </p>
                 </div>
+            </div>
+        </div>
+
+        <!-- Experience -->
+        <div class="row m-3">
+            <div class="col">
+                <!-- Energy Locals -->
                 <div class="row">
-                    <p>
-                        I currently have almost 1 year's experience building software and providing IT support
-                        for
-                        Energy Locals. Below is a brief overview of my main technical skill sets and the
-                        technolgies and
-                        frameworks I use.
-                    </p>
+                    <div class="col">
+                        <div class="row">
+                            <img src="images/energy-locals.png" height="48px" />
+                        </div>
+                        <div class="row">
+                            <p class="font-weight-bold">
+                                Graduate IT Specialist (2019 - Current)
+                            </p>
+                        </div>
+                        <div class="row">
+                            <ul>
+                                <li>
+                                    Develop a process and tool to import large amounts to data weekly into a database
+                                    with error and logging features.
+                                </li>
+                                <li>
+                                    Create and maintain web pages.
+                                </li>
+                                <li>
+                                    Document processes, tools, services, issues, and created tutorial content.
+                                </li>
+                                <li>
+                                    Converted a manual process of creating partner reports for businesses to an
+                                    automated process.
+                                </li>
+                                <li>
+                                    Write and maintain Bash scripts that:
+                                    <ul>
+                                        <li>
+                                            Process and move data.
+                                        </li>
+                                        <li>
+                                            Interact and backup services.
+                                        </li>
+                                        <li>
+                                            Interact with APIs.
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    Write and maintain PowerShell scripts that backup SQL data.
+                                </li>
+                                <li>
+                                    Create and maintain VPSes that:
+                                </li>
+                                <li>
+                                    Host and run services for business and IT needs.
+                                </li>
+                                <li>
+                                    Run a reverse proxy in front of services to provide security features such as HTTPS.
+                                </li>
+                                <li>
+                                    Write and maintain SQL scripts that:
+                                    <ul>
+                                        <li>
+                                            Provide reporting data.
+                                        </li>
+                                        <li>
+                                            Answer business questions.
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    Aid in working with large complex databases.
+                                </li>
+                                <li>
+                                    Assist in business and government reporting.
+                                </li>
+                                <li>
+                                    Manage and create digital content using a CMS.
+                                </li>
+                                <li>
+                                    Research and assist in purchasing, installing, testing, and configuring networking
+                                    equipment.
+                                </li>
+                                <li>
+                                    Create invoices and letters (email and mail) templates for customers and businesses.
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- RMIT Open Day -->
+                <div class="row pt-3">
+                    <div class="col">
+                        <div class="row">
+                            <img src="images/rmit.png" />
+                        </div>
+                        <div class="row">
+                            <p class="font-weight-bold">
+                                Open Day
+                            </p>
+                        </div>
+                        <div class="row">
+                            <p>
+                                Demonstrated Capstone project to visitors
+                                project.
+                            </p>
+                        </div>
+                        <div class="row">
+                            <p>
+                                Answer questions related to studying engineering at RMIT, and the capstone.
+
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -109,7 +232,7 @@
         <div class="row m-3 pt-5">
             <div class="col">
                 <div class="row">
-                    <h5 class="lead left-border-blue" style="font-size:xx-large;">
+                    <h5 class="lead left-border-blue font-weight-bold" style="font-size:xx-large;">
                         What I Do
                 </div>
                 <div class="row">
@@ -122,14 +245,14 @@
                         I currently have almost 1 year's experience building software and providing IT support
                         for
                         Energy Locals. Below is a brief overview of my main technical skill sets and the
-                        technolgies and
+                        technologies and
                         frameworks I use.
                     </p>
                 </div>
             </div>
         </div>
 
-        <!-- Technical Skills and Technologies-->
+        <!-- Technical Skills and Technologies -->
         <div class="row m-3">
             <!-- Column 1 -->
             <div class="col mr-3">
@@ -141,7 +264,7 @@
                             <!-- <a href="https://icons8.com/icon/45490/c-sharp-logo-2">C Sharp Logo 2 icon by Icons8</a> -->
                         </div>
                         <div class="row">
-                            <p class="font-weight-bold">
+                            <p class="font-weight-bold c-sharp">
                                 C#
                             </p>
                             <p>
@@ -163,7 +286,7 @@
                             <!-- <a href="https://icons8.com/icon/59500/powershell">PowerShell icon by Icons8</a> -->
                         </div>
                         <div class="row">
-                            <p class="font-weight-bold">
+                            <p class="font-weight-bold powershell">
                                 PowerShell
                             </p>
                             <p>
@@ -188,7 +311,7 @@
                             <!-- <a href="https://icons8.com/icon/laYYF3dV0Iew/microsoft-sql-server">Microsoft SQL Server icon by Icons8</a> -->
                         </div>
                         <div class="row">
-                            <p class="font-weight-bold">
+                            <p class="font-weight-bold sql">
                                 SQL
                             </p>
                             <p>
@@ -210,7 +333,7 @@
                             <!-- <a href="https://icons8.com/icon/laYYF3dV0Iew/microsoft-sql-server">Microsoft SQL Server icon by Icons8</a> -->
                         </div>
                         <div class="row">
-                            <p class="font-weight-bold">
+                            <p class="font-weight-bold bash">
                                 Bash
                             </p>
                             <p>
@@ -235,8 +358,8 @@
                             <!-- <a href="https://icons8.com/icon/108784/javascript">JavaScript icon by Icons8</a> -->
                         </div>
                         <div class="row">
-                            <p class="font-weight-bold">
-                                Vanilla JavaScript
+                            <p class="font-weight-bold js">
+                                JavaScript
                             </p>
                             <p>
                                 I currently have almost 1 year's experience building software and providing IT support
@@ -257,7 +380,7 @@
                             <!-- <a href="https://www.iconfinder.com/Flatart">Laravel icon by Flatart</a> -->
                         </div>
                         <div class="row">
-                            <p class="font-weight-bold">
+                            <p class="font-weight-bold laravel">
                                 Laravel
                             </p>
                             <p>
@@ -282,7 +405,7 @@
                             <!-- <a href="https://icons8.com/icon/84710/bootstrap">Bootstrap icon by Icons8</a> -->
                         </div>
                         <div class="row">
-                            <p class="font-weight-bold">
+                            <p class="font-weight-bold bs">
                                 Bootstrap
                             </p>
                             <p>
@@ -304,7 +427,7 @@
                             <!-- <a href="https://icons8.com/icon/40669/c++">C++ icon by Icons8</a> -->
                         </div>
                         <div class="row">
-                            <p class="font-weight-bold">
+                            <p class="font-weight-bold cpp">
                                 C++
                             </p>
                             <p>
@@ -324,20 +447,42 @@
         <div class="row m-3 pt-5">
             <div class="col">
                 <div class="row">
-                    <h5 class="lead left-border-green" style="font-size:xx-large;">
+                    <h5 class="lead font-weight-bold left-border-yellow" style="font-size:xx-large;">
                         Education
+                    </h5>
+                </div>
+                <!-- RMIT -->
+                <div class="row my-3">
+                    <img src="images/rmit.png" />
                 </div>
                 <div class="row">
-                    <p style="font-size:large;">
-                        Computer and Network Engineering (Honours)
-                    </p>
+                    <dl class="row">
+                        <!-- Degree -->
+                        <dt class="col-2">
+                            Degree
+                        </dt>
+                        <dd class="col-10">
+                            Computer and Network Engineering (Honours)
+                        </dd>
+
+                        <!-- Location -->
+                        <dt class="col-2">
+                            Location
+                        </dt>
+                        <dd class="col-10">
+                            RMIT, Melbourne, Australia
+                        </dd>
+
+                        <!-- Status -->
+                        <dt class="col-2">
+                            Status
+                        </dt>
+                        <dd class="col-10">
+                            2016 - Current
+                        </dd>
+                    </dl>
                 </div>
-                <div class="row">
-                    <p>
-                        RMIT, Melbourne<br>
-                        2016 - Current
-                    </p>
-                </div>
+                <!-- Transcript -->
                 <div class="row">
                     <button type="button" class="btn btn-outline-primary">
                         View Transcript
