--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 </head>
 
 <body>
-    <div class="content">
+    <div class="container">
         <div class="menu">
             <a href="index.html">Home</a>
             <a href="html/archrives/proident_laborum.html">Archives</a>
             <a>About</a>
         </div>
-        <div id="articles">
+        <div id="content">
 
         </div>
     </div>
