--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <div class="container">
         <div class="menu">
-            <a href="index.html">Home</a>
-            <a href="html/archrives/proident_laborum.html">Archives</a>
+            <a href="#home">Home</a>
+            <a href="#archives">Archives</a>
             <a>About</a>
         </div>
         <div id="content">
