--- a/html/error.html
+++ b/html/error.html
@@ -4,7 +4,8 @@
     </div>
     <div class="article-body">
         <p>
-            Looks like soemthing went wrong!
+            Looks like something went wrong!
         </p>
+        <p>Don't worry here's the error:</p>
     </div>
 </div>
