--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="menu">
             <a href="#home">Home</a>
             <a href="#archives">Archives</a>
-            <a>About</a>
+            <a href="#about">About</a>
         </div>
         <div id="content">
 
