Working scroll history.

--- a/html/critical.html
+++ b/html/critical.html
@@ -1,10 +1,40 @@
-<div class="article">
-    <div class="article-header">
-        <h2 class="article-title">Wow, you're not meant to see this!</h2>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link rel="stylesheet" href="../css/index.css" />
+    <title>Currently Under Construction</title>
+</head>
+
+<body>
+    <div class="container">
+        <div class="menu">
+            <a href="../index.html">
+                <p>Home</p>
+            </a>
+            <a href="#archives">
+                <p>Archives</p>
+            </a>
+            <a href="#about">
+                <p>About</p>
+            </a>
+        </div>
+        <div id="content">
+            <div class="article">
+                <div class="article-header">
+                    <h2 class="article-title">Wow, you're not meant to see this!</h2>
+                </div>
+                <div class="article-body">
+                    <p>
+                        Looks like something went very wrong!
+                    </p>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="article-body">
-        <p>
-            Looks like something went very wrong!
-        </p>
-    </div>
-</div>
+</body>
+
+</html>
