--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="js/index.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
