--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
 <body>
     <div class="container">
         <div class="menu">
-            <a href="#home"><p>Home</p></a>
-            <a href="#archives"><p>Archives</p></a>
-            <a href="#about"><p>About</p></a>
+            <a href="#home">
+                <p>Home</p>
+            </a>
+            <a href="#archives">
+                <p>Archives</p>
+            </a>
+            <a href="#about">
+                <p>About</p>
+            </a>
         </div>
         <div id="content">
 
