--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  <body>
   <div class="container">
    <div class="menu">
-    <a href="/html/home.html">
+    <a href="/">
      <p>
       Home
      </p>
