--- a/html/base.html
+++ b/html/base.html
@@ -5,29 +5,26 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="/css/index.css/">
     <title>Currently Under Construction</title>
 </head>
 
 <body>
     <div class="container">
         <div class="menu">
-            <a href="#home">
+            <a href="/html/home.html">
                 <p>Home</p>
             </a>
-            <a href="#archives">
+            <a href="/html/archives.html">
                 <p>Archives</p>
             </a>
-            <a href="#about">
+            <a href="/html/about.html">
                 <p>About</p>
             </a>
         </div>
         <div id="content">
-
         </div>
     </div>
-
-    <script src="js/index.js"></script>
 </body>
 
 </html>
