--- a/html/proident_laborum.html
+++ b/html/proident_laborum.html
@@ -10,8 +10,7 @@
         </p>
     </div>
     <div class="article-body">
-        <img
-            src="https://s3.amazonaws.com/ooomf-com-files/wjNV6gWuQkqeuH8txHc9_sylwiabartyzel_unsplash_tatry_03.jpg">
+        <img src="https://s3.amazonaws.com/ooomf-com-files/wjNV6gWuQkqeuH8txHc9_sylwiabartyzel_unsplash_tatry_03.jpg">
         <p>
             Integer vitae lectus accumsan, egestas dui eget, ullamcorper urn. In feugiat tortor at
             turpis rhoncus tincidunt. Duis sed porttitor ante, eget venenatis lectus.
