--- a/index.html
+++ b/index.html
@@ -1,334 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
- <head>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"/>
-  <link href="/css/index.css/" rel="stylesheet"/>
-  <title>
-   Currently Under Construction
-  </title>
- </head>
- <body>
-  <div class="container">
-   <div class="menu">
-    <a href="/html/home.html">
-     <p>
-      Home
-     </p>
-    </a>
-    <a href="/html/archives.html">
-     <p>
-      Archives
-     </p>
-    </a>
-    <a href="/html/about.html">
-     <p>
-      About
-     </p>
-    </a>
-   </div>
-   <div id="content">
-    <div class="article">
-     <div class="article-header">
-      <a href="html\proident_laborum - Copy (10).html">
-       <h2 class="article-title">
-        Proident laborum
-       </h2>
-      </a>
-      <p class="article-subtitle">
-       By
-       <a class="article-author" href="#">
-        Praesent consectetur
-       </a>
-       on
-       <span class="article-date">
-        03/03/2020
-       </span>
-       under
-       <a class="article-category" href="#">
-        Test
-       </a>
-      </p>
-     </div>
-     <div class="article-body">
-      <img src="https://s3.amazonaws.com/ooomf-com-files/wjNV6gWuQkqeuH8txHc9_sylwiabartyzel_unsplash_tatry_03.jpg"/>
-      <p class="truncate">
-       Integer vitae lectus accumsan, egestas dui eget, ullamcorper urn. In feugiat tortor at
-            turpis rhoncus tincidunt. Duis sed porttitor ante, eget venenatis lectus.
-      </p>
-     </div>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link rel="stylesheet" href="css/index.css" />
+    <title>Currently Under Construction</title>
+</head>
+
+<body>
+    <div class="container">
+        <div class="menu">
+            <a href="#home">
+                <p>Home</p>
+            </a>
+            <a href="#archives">
+                <p>Archives</p>
+            </a>
+            <a href="#about">
+                <p>About</p>
+            </a>
+        </div>
+        <div id="content">
+
+        </div>
     </div>
-    <div class="article">
-     <div class="article-header">
-      <a href="html\proident_laborum - Copy (11).html">
-       <h2 class="article-title">
-        Proident laborum
-       </h2>
-      </a>
-      <p class="article-subtitle">
-       By
-       <a class="article-author" href="#">
-        Praesent consectetur
-       </a>
-       on
-       <span class="article-date">
-        03/03/2020
-       </span>
-       under
-       <a class="article-category" href="#">
-        Test
-       </a>
-      </p>
-     </div>
-     <div class="article-body">
-      <img src="https://s3.amazonaws.com/ooomf-com-files/wjNV6gWuQkqeuH8txHc9_sylwiabartyzel_unsplash_tatry_03.jpg"/>
-      <p class="truncate">
-       Integer vitae lectus accumsan, egestas dui eget, ullamcorper urn. In feugiat tortor at
-            turpis rhoncus tincidunt. Duis sed porttitor ante, eget venenatis lectus.
-      </p>
-     </div>
-    </div>
-    <div class="article">
-     <div class="article-header">
-      <a href="html\proident_laborum - Copy (12).html">
-       <h2 class="article-title">
-        Proident laborum
-       </h2>
-      </a>
-      <p class="article-subtitle">
-       By
-       <a class="article-author" href="#">
-        Praesent consectetur
-       </a>
-       on
-       <span class="article-date">
-        03/03/2020
-       </span>
-       under
-       <a class="article-category" href="#">
-        Test
-       </a>
-      </p>
-     </div>
-     <div class="article-body">
-      <img src="https://s3.amazonaws.com/ooomf-com-files/wjNV6gWuQkqeuH8txHc9_sylwiabartyzel_unsplash_tatry_03.jpg"/>
-      <p class="truncate">
-       Integer vitae lectus accumsan, egestas dui eget, ullamcorper urn. In feugiat tortor at
-            turpis rhoncus tincidunt. Duis sed porttitor ante, eget venenatis lectus.
-      </p>
-     </div>
-    </div>
-    <div class="article">
-     <div class="article-header">
-      <a href="html\proident_laborum - Copy (13).html">
-       <h2 class="article-title">
-        Proident laborum
-       </h2>
-      </a>
-      <p class="article-subtitle">
-       By
-       <a class="article-author" href="#">
-        Praesent consectetur
-       </a>
-       on
-       <span class="article-date">
-        03/03/2020
-       </span>
-       under
-       <a class="article-category" href="#">
-        Test
-       </a>
-      </p>
-     </div>
-     <div class="article-body">
-      <img src="https://s3.amazonaws.com/ooomf-com-files/wjNV6gWuQkqeuH8txHc9_sylwiabartyzel_unsplash_tatry_03.jpg"/>
-      <p class="truncate">
-       Integer vitae lectus accumsan, egestas dui eget, ullamcorper urn. In feugiat tortor at
-            turpis rhoncus tincidunt. Duis sed porttitor ante, eget venenatis lectus.
-      </p>
-     </div>
-    </div>
-    <div class="article">
-     <div class="article-header">
-      <a href="html\proident_laborum - Copy (14).html">
-       <h2 class="article-title">
-        Proident laborum
-       </h2>
-      </a>
-      <p class="article-subtitle">
-       By
-       <a class="article-author" href="#">
-        Praesent consectetur
-       </a>
-       on
-       <span class="article-date">
-        03/03/2020
-       </span>
-       under
-       <a class="article-category" href="#">
-        Test
-       </a>
-      </p>
-     </div>
-     <div class="article-body">
-      <img src="https://s3.amazonaws.com/ooomf-com-files/wjNV6gWuQkqeuH8txHc9_sylwiabartyzel_unsplash_tatry_03.jpg"/>
-      <p class="truncate">
-       Integer vitae lectus accumsan, egestas dui eget, ullamcorper urn. In feugiat tortor at
-            turpis rhoncus tincidunt. Duis sed porttitor ante, eget venenatis lectus.
-      </p>
-     </div>
-    </div>
-    <div class="article">
-     <div class="article-header">
-      <a href="html\proident_laborum - Copy (15).html">
-       <h2 class="article-title">
-        Proident laborum
-       </h2>
-      </a>
-      <p class="article-subtitle">
-       By
-       <a class="article-author" href="#">
-        Praesent consectetur
-       </a>
-       on
-       <span class="article-date">
-        03/03/2020
-       </span>
-       under
-       <a class="article-category" href="#">
-        Test
-       </a>
-      </p>
-     </div>
-     <div class="article-body">
-      <img src="https://s3.amazonaws.com/ooomf-com-files/wjNV6gWuQkqeuH8txHc9_sylwiabartyzel_unsplash_tatry_03.jpg"/>
-      <p class="truncate">
-       Integer vitae lectus accumsan, egestas dui eget, ullamcorper urn. In feugiat tortor at
-            turpis rhoncus tincidunt. Duis sed porttitor ante, eget venenatis lectus.
-      </p>
-     </div>
-    </div>
-    <div class="article">
-     <div class="article-header">
-      <a href="html\proident_laborum - Copy (16).html">
-       <h2 class="article-title">
-        Proident laborum
-       </h2>
-      </a>
-      <p class="article-subtitle">
-       By
-       <a class="article-author" href="#">
-        Praesent consectetur
-       </a>
-       on
-       <span class="article-date">
-        03/03/2020
-       </span>
-       under
-       <a class="article-category" href="#">
-        Test
-       </a>
-      </p>
-     </div>
-     <div class="article-body">
-      <img src="https://s3.amazonaws.com/ooomf-com-files/wjNV6gWuQkqeuH8txHc9_sylwiabartyzel_unsplash_tatry_03.jpg"/>
-      <p class="truncate">
-       Integer vitae lectus accumsan, egestas dui eget, ullamcorper urn. In feugiat tortor at
-            turpis rhoncus tincidunt. Duis sed porttitor ante, eget venenatis lectus.
-      </p>
-     </div>
-    </div>
-    <div class="article">
-     <div class="article-header">
-      <a href="html\proident_laborum - Copy (17).html">
-       <h2 class="article-title">
-        Proident laborum
-       </h2>
-      </a>
-      <p class="article-subtitle">
-       By
-       <a class="article-author" href="#">
-        Praesent consectetur
-       </a>
-       on
-       <span class="article-date">
-        03/03/2020
-       </span>
-       under
-       <a class="article-category" href="#">
-        Test
-       </a>
-      </p>
-     </div>
-     <div class="article-body">
-      <img src="https://s3.amazonaws.com/ooomf-com-files/wjNV6gWuQkqeuH8txHc9_sylwiabartyzel_unsplash_tatry_03.jpg"/>
-      <p class="truncate">
-       Integer vitae lectus accumsan, egestas dui eget, ullamcorper urn. In feugiat tortor at
-            turpis rhoncus tincidunt. Duis sed porttitor ante, eget venenatis lectus.
-      </p>
-     </div>
-    </div>
-    <div class="article">
-     <div class="article-header">
-      <a href="html\proident_laborum - Copy (18).html">
-       <h2 class="article-title">
-        Proident laborum
-       </h2>
-      </a>
-      <p class="article-subtitle">
-       By
-       <a class="article-author" href="#">
-        Praesent consectetur
-       </a>
-       on
-       <span class="article-date">
-        03/03/2020
-       </span>
-       under
-       <a class="article-category" href="#">
-        Test
-       </a>
-      </p>
-     </div>
-     <div class="article-body">
-      <img src="https://s3.amazonaws.com/ooomf-com-files/wjNV6gWuQkqeuH8txHc9_sylwiabartyzel_unsplash_tatry_03.jpg"/>
-      <p class="truncate">
-       Integer vitae lectus accumsan, egestas dui eget, ullamcorper urn. In feugiat tortor at
-            turpis rhoncus tincidunt. Duis sed porttitor ante, eget venenatis lectus.
-      </p>
-     </div>
-    </div>
-    <div class="article">
-     <div class="article-header">
-      <a href="html\proident_laborum - Copy (2).html">
-       <h2 class="article-title">
-        Proident laborum
-       </h2>
-      </a>
-      <p class="article-subtitle">
-       By
-       <a class="article-author" href="#">
-        Praesent consectetur
-       </a>
-       on
-       <span class="article-date">
-        03/03/2020
-       </span>
-       under
-       <a class="article-category" href="#">
-        Test
-       </a>
-      </p>
-     </div>
-     <div class="article-body">
-      <img src="https://s3.amazonaws.com/ooomf-com-files/wjNV6gWuQkqeuH8txHc9_sylwiabartyzel_unsplash_tatry_03.jpg"/>
-      <p class="truncate">
-       Integer vitae lectus accumsan, egestas dui eget, ullamcorper urn. In feugiat tortor at
-            turpis rhoncus tincidunt. Duis sed porttitor ante, eget venenatis lectus.
-      </p>
-     </div>
-    </div>
-   </div>
-  </div>
- </body>
+
+    <script src="js/index.js"></script>
+</body>
+
 </html>
