Changed home link so that it refreshes the page.

--- a/html/base.html
+++ b/html/base.html
@@ -5,26 +5,29 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="/css/index.css/">
+    <link rel="stylesheet" href="../css/index.css" />
     <title>Currently Under Construction</title>
 </head>
 
 <body>
     <div class="container">
         <div class="menu">
-            <a href="/html/home.html">
+            <a href="#home">
                 <p>Home</p>
             </a>
-            <a href="/html/archives.html">
+            <a href="#archives">
                 <p>Archives</p>
             </a>
-            <a href="/html/about.html">
+            <a href="#about">
                 <p>About</p>
             </a>
         </div>
         <div id="content">
+
         </div>
     </div>
+
+    <script src="../js/index.js"></script>
 </body>
 
 </html>
