--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="menu">
-            <a href="#home">
+            <a href="#">
                 <p>Home</p>
             </a>
             <a href="#archives">
