--- a/html/proident_laborum.html
+++ b/html/proident_laborum.html
@@ -1,12 +1,8 @@
 <div class="article">
     <div class="article-header">
         <h2 class="article-title">Proident laborum</h2>
-        <p class="article-subtitle">By
-            <a class="article-author" href="#">Praesent consectetur</a>
-            on
-            <span class="article-date">03/03/2020</span>
-            under
-            <a class="article-category" href="#">Test</a>
+        <p class="article-subtitle">On <a class="article-date">03/03/2020</a> under <a class="article-category"
+                href="#">Test</a>
         </p>
     </div>
     <div class="article-body">
