Added go to top.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <div id="content">
 
         </div>
+        <a id="go-to-top" class="article-subtitle">[Go to top]</a>
     </div>
 
     <script src="js/index.js"></script>
