--- a/html/proident_laborum - Copy.html
+++ b/html/proident_laborum - Copy.html
@@ -1,8 +1,7 @@
 <div class="article">
     <div class="article-header">
         <h2 class="article-title">Proident laborum</h2>
-        <p class="article-subtitle">On <a class="article-date">03/03/2020</a> under <a class="article-category"
-                href="#">Test</a>
+        <p class="article-subtitle">On <a class="article-date">03/03/2020</a> under <a class="article-category">Test</a>
         </p>
     </div>
     <div class="article-body">
