--- a/html/proident_laborum.html
+++ b/html/proident_laborum.html
@@ -1,7 +1,7 @@
 <div class="article">
     <div class="article-header">
         <h2 class="article-title">Proident laborum</h2>
-        <p class="article-subtitle">On <a class="article-date">03/03/2020</a> under <a class="article-category">Test</a>
+        <p class="article-subtitle">On <span class="article-date">03/03/2020</span> under <span class="article-category">Test</span>
         </p>
     </div>
     <div class="article-body">
