--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
             <a href="#about">
                 <p>About</p>
             </a>
+            <p id="theme" class="hover pointer">[Dark Mode]</p>
         </div>
         <div id="content">
 
         </div>
-        <a id="go-to-top" class="article-subtitle">[Go to top]</a>
+        <a id="go-to-top" class="article-subtitle hover pointer">[Go to top]</a>
     </div>
 
     <script src="js/index.js"></script>
