Fixed home link.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="menu">
-            <a href="#">
+            <a href="#home">
                 <p>Home</p>
             </a>
             <a href="#archives">
@@ -29,6 +29,7 @@
         <a id="go-to-top" class="article-subtitle hover pointer">[Go to top]</a>
     </div>
 
+    <script src="js/observable.js"></script>
     <script src="js/index.js"></script>
 </body>
 
