--- a/html/archives.html
+++ b/html/archives.html
@@ -2,7 +2,7 @@
  March 2020
 </h2><div class="article">
  <div class="article-header">
-  <a href="https://raw.githubusercontent.com/HuyNguyenAu/huynguyen/master/html/proident_laborum.html">
+  <a href="#proident_laborum">
    <h2 class="article-title">
     Proident laborum
    </h2>
