--- a/html/about.html
+++ b/html/about.html
@@ -7,7 +7,7 @@
     </div>
     <div class="article-body">
         <p>
-            A simple minimal partial SPA used for blogging about things that interest me.
+            A hacked together minimal and not really a JAMSTACK web app for blogging about things that interest me.
         </p>
     </div>
 </div>
