Added Github repo

--- a/html/about.html
+++ b/html/about.html
@@ -9,5 +9,6 @@
         <p>
             A hacked together minimal and not really a JAMSTACK web app for blogging about things that interest me.
         </p>
+        <a href="https://github.com/HuyNguyenAu/huynguyen">[Github]</a>
     </div>
 </div>
