Updated error template.

--- a/html/error.html
+++ b/html/error.html
@@ -1,11 +1,13 @@
-<div class="article">
-    <div class="article-header">
-        <h2 class="article-title">OOPS!</h2>
-    </div>
-    <div class="article-body">
-        <p>
-            Looks like something went wrong!
-        </p>
-        <p>Don't worry here's the error:</p>
+<div class="card m-6">
+    <div class="card-content">
+        <div class="media">
+            <div class="media-content">
+                <p class="title is-4">OOPS!</p>
+            </div>
+        </div>
+        <div class="content">
+            <p>Looks like something went wrong!</p>
+            <p id="error">Don't worry, here's the error:</p>
+        </div>
     </div>
 </div>
