Updated to new style.

--- a/html/about.html
+++ b/html/about.html
@@ -1,14 +1,29 @@
 <div class="article">
     <div class="article-header">
-        <h2 class="article-title">About</h2>
+        <h2 class="article-title"></h2>
         <p class="article-subtitle" hidden>On <span class="article-date">30/07/2020</span> under <span
                 class="article-category">Base</span>
         </p>
     </div>
     <div class="article-body">
         <p>
-            A hacked together minimal and not really a JAMSTACK web app for blogging about things that interest me.
+
         </p>
-        <a href="https://github.com/HuyNguyenAu/huynguyen">[Github]</a>
+
+    </div>
+</div>
+
+<div class="card m-6">
+    <div class="card-content">
+        <div class="media">
+            <div class="media-content">
+                <p class="title is-4">About</p>
+            </div>
+        </div>
+        <div class="content">
+            <p>A hacked together minimal and not really a JAMSTACK web app for blogging about things that interest me.
+            </p>
+            <a href="https://github.com/HuyNguyenAu/huynguyen">[Github]</a>
+        </div>
     </div>
 </div>
