--- a/html/about.html
+++ b/html/about.html
@@ -23,7 +23,7 @@
         <div class="content">
             <p>A hacked together minimal and not really a JAMSTACK web app for blogging about things that interest me.
             </p>
-            <a href="https://github.com/HuyNguyenAu/huynguyen">[Github]</a>
+            <a href="https://github.com/HuyNguyenAu/huynguyen">Github</a>
         </div>
     </div>
 </div>
