--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css"
         integrity="sha256-WLKGWSIJYerRN8tbNGtXWVYnUM5wMJTXD8eG4NtGcDM=" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/index.css" defer/>
+
     <title>Huy Nguyen's Blog</title>
 </head>
 
@@ -50,7 +51,7 @@
         </div>
     </footer>
 
-    <script src="js/index.js"></script>
+    <script src="js/index.js" defer></script>
 </body>
 
 </html>
