--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css"
         integrity="sha256-WLKGWSIJYerRN8tbNGtXWVYnUM5wMJTXD8eG4NtGcDM=" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/index.css" defer/>
+    <link rel="stylesheet" href="css/index.css"/>
 
     <title>Huy Nguyen's Blog</title>
 </head>
@@ -37,6 +37,11 @@
                 </a>
                 <a class="navbar-item" href="#about">
                     About
+                </a>
+            </div>
+            <div class="navbar-end">
+                <a id="theme" class="navbar-item">
+                   Dark Mode
                 </a>
             </div>
         </div>
