--- a/html/base.html
+++ b/html/base.html
@@ -5,27 +5,58 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="../css/index.css" />
-    <title>Currently Under Construction</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css"
+        integrity="sha256-WLKGWSIJYerRN8tbNGtXWVYnUM5wMJTXD8eG4NtGcDM=" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/index.css"/>
+
+    <title>Huy Nguyen's Blog</title>
 </head>
 
 <body>
-    <div class="container">
-        <div class="menu">
-            <a href="#">
-                <p>Home</p>
+    <nav class="navbar" role="navigation" aria-label="main navigation">
+        <div class="navbar-brand">
+            <a class="navbar-item" href="#home">
+                <div class="box pt-0 is-shadowless">
+                    <h1 class="title">._.</h1>
+                </div>
             </a>
-            <a href="#archives">
-                <p>Archives</p>
-            </a>
-            <a href="#about">
-                <p>About</p>
+            <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbar">
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
             </a>
         </div>
-        <div id="content">
 
+        <div id="navbar" class="navbar-menu">
+            <div class="navbar-start">
+                <a class="navbar-item" href="#home">
+                    Home
+                </a>
+                <a class="navbar-item" href="#archives">
+                    Archives
+                </a>
+                <a class="navbar-item" href="#about">
+                    About
+                </a>
+            </div>
+            <div class="navbar-end">
+                <a id="theme" class="navbar-item">
+                   Dark Mode
+                </a>
+            </div>
         </div>
+    </nav>
+
+    <div id="content" class="container">
     </div>
+
+    <footer class="footer">
+        <div class="content has-text-centered">
+            <button id="go-to-top" class="button">Go to top</button>
+        </div>
+    </footer>
+
+    <script src="js/index.js" defer></script>
 </body>
 
 </html>
