--- a/html/proident_laborum.html
+++ b/html/proident_laborum.html
@@ -1,6 +1,6 @@
 <div class="card m-6">
     <div class="card-image">
-        <figure class="image">
+        <figure class="image is-3by1">
             <img
                 src="https://s3.amazonaws.com/ooomf-com-files/wjNV6gWuQkqeuH8txHc9_sylwiabartyzel_unsplash_tatry_03.jpg">
         </figure>
